# cassette

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  Justfile  README.md  Trunk.toml  deny.toml  index.html  nginx.conf  package-lock.json  package.json  robots.txt
.github/workflows/: ci.yml  clippy.yml  gh_pages.yml  lint.yaml  pr_check.yml
crates/: .gitignore
crates/cassette/: Cargo.toml  build.rs  index.html  index.scss
crates/cassette-core/: Cargo.toml
crates/cassette-core/src/: cassette.rs  component.rs  document.rs  keycode.rs  lib.rs  result.rs  task.rs
crates/cassette-core/src/components/: actor.rs  error.rs  loading.rs  mod.rs  todo.rs
crates/cassette-core/src/data/: actor.rs  cdl.rs  csv.rs  mod.rs  table.rs
crates/cassette-core/src/data/actor/: boolean.rs  enum.rs  mod.rs  number.rs  string.rs
crates/cassette-core/src/net/: fetch.rs  gateway.rs  mod.rs  stream.rs
crates/cassette-gateway/: Cargo.toml  robots.txt
crates/cassette-gateway/src/: actix.rs  agent.rs  db.rs  main.rs  reloader.rs
crates/cassette-gateway/src/routes/: cassette.rs
crates/cassette-loader-core/: Cargo.toml
crates/cassette-loader-core/src/: lib.rs
crates/cassette-loader-file/: Cargo.toml  build.rs
crates/cassette-loader-file/src/: lib.rs
crates/cassette-operator/: Cargo.toml
crates/cassette-operator/src/: main.rs
crates/cassette-operator/src/ctx/: cassette.rs  component.rs  mod.rs
crates/cassette-plugin-cdl-api/: Cargo.toml
crates/cassette-plugin-cdl-api/src/: lib.rs  zone.rs
crates/cassette-plugin-cdl-catalog/: Cargo.toml
crates/cassette-plugin-cdl-catalog/src/: lib.rs
crates/cassette-plugin-cdl-core/: Cargo.toml
crates/cassette-plugin-cdl-dataset-browser/: Cargo.toml
crates/cassette-plugin-cdl-dataset-browser/src/: lib.rs
crates/cassette-plugin-cdl-dataset-stream-reader/: Cargo.toml
crates/cassette-plugin-cdl-dataset-stream-reader/src/: lib.rs
crates/cassette-plugin-cdl-dataset-streamer/: Cargo.toml
crates/cassette-plugin-cdl-zone/: Cargo.toml
crates/cassette-plugin-cdl-zone/src/: actor.rs  hooks.rs  lib.rs  load.rs
crates/cassette-plugin-helm-api/: Cargo.toml
crates/cassette-plugin-helm-api/src/: client.rs  lib.rs
crates/cassette-plugin-helm-core/: Cargo.toml
crates/cassette-plugin-helm-core/src/: lib.rs
crates/cassette-plugin-jwt/: Cargo.toml
crates/cassette-plugin-jwt/src/: lib.rs
crates/cassette-plugin-kubernetes/: Cargo.toml
crates/cassette-plugin-kubernetes-api/: Cargo.toml
crates/cassette-plugin-kubernetes-api/src/: lib.rs  user.rs
crates/cassette-plugin-kubernetes-core/: Cargo.toml
crates/cassette-plugin-kubernetes-core/src/: api.rs  client.rs  hooks.rs  lib.rs  user.rs
crates/cassette-plugin-kubernetes-list/: Cargo.toml
crates/cassette-plugin-kubernetes-list/src/: lib.rs
crates/cassette-plugin-kubernetes/src/: lib.rs
crates/cassette-plugin-openai-chat/: Cargo.toml
crates/cassette-plugin-openai-chat/src/: hooks.rs  lib.rs  schema.rs
crates/cassette-plugin-webcam-audio/: Cargo.toml
crates/cassette-plugin-webcam-audio/src/: lib.rs
crates/cassette-plugin-webcam-core/: Cargo.toml
crates/cassette-plugin-webcam-core/src/: hooks.rs  lib.rs  recorder.rs
crates/cassette/src/: app.rs  history.rs  main.rs  panic_hook.rs  route.rs  tracer.rs
crates/cassette/src/components/: actor.rs  file_upload.rs  load.rs  mod.rs  table.rs  text.rs  text_input.rs  variable.rs
crates/cassette/src/components/actor/: array.rs  boolean.rs  enum.rs  generic.rs  mod.rs  number.rs  root.rs  string.rs
crates/cassette/src/hooks/: gateway.rs  mod.rs  redirect.rs
crates/cassette/src/pages/: cassette.rs  error.rs  error_404.rs  home.rs  license.rs  mod.rs  profile.rs  user.rs
examples/: cdl_catalog.yaml  cdl_dataset_browser.yaml  cdl_dataset_catalog.yaml  cdl_dataset_create_dynamic.yaml  cdl_dataset_create_remote.yaml  cdl_dataset_create_static.yaml  cdl_dataset_stream_reader.yaml  cdl_endpoint_create_external.yaml  cdl_endpoint_create_internal.yaml  cdl_endpoint_list.yaml  cdl_pond_create_owned.yaml  cdl_pond_create_remote.yaml  cdl_pond_create_shared.yaml  cdl_pond_list.yaml  cdl_zone.yaml  data_csv_table.yaml  hello_world.yaml  helm_actor_mobilex-vstation.yaml  helm_actor_nvidia_isaac_sim.yaml  helm_list.yaml  kubernetes_list.yaml  mobilex_vstation_create.yaml  openai_chat.yaml  webcam_record_audio.yaml
examples/cdl/: storage.yaml
kubernetes/: README.md  app.yaml  client-ingress.yaml  client.yaml  gateway.yaml  ingress.yaml  namespace.yaml  operator.yaml  player.yaml
samples/: hello_world.yaml
static/: initializer.mjs
