[workspace]
default-members = ["crates/cassette"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Cloud-native Template-based dynamic declarative Web UI Framework"
documentation = "https://docs.rs/cassette"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["cassette", "kubernetes", "frontend"]
license = "AGPL-3.0-or-later"
readme = "./README.md"
rust-version = "1.78"
homepage = "https://github.com/ulagbulag/cassette"
repository = "https://github.com/ulagbulag/cassette"
version = "0.1.0"

[workspace.lints.clippy]
blocks_in_conditions = "allow" # opentelemetry tracing macro would be noisy

[workspace.dependencies]
ark-core = { git = "https://github.com/ulagbulag/OpenARK" }
ark-core-k8s = { git = "https://github.com/ulagbulag/OpenARK", default-features = false }
dash-pipe-provider = { git = "https://github.com/ulagbulag/OpenARK", default-features = false }
dash-api = { git = "https://github.com/ulagbulag/OpenARK", default-features = false }
vine-api = { git = "https://github.com/ulagbulag/OpenARK", default-features = false }
vine-rbac = { git = "https://github.com/ulagbulag/OpenARK", default-features = false, features = [
    "actix",
] }

actix-cors = { version = "=0.7" }
actix-web = { version = "=4.9", default-features = false, features = [
    "macros",
] }
actix-web-opentelemetry = { version = "=0.19", features = ["metrics"] }
anyhow = { version = "=1.0", features = ["backtrace"] }
async-trait = { version = "=0.1" }
base64 = { version = "=0.22" }
browser-panic-hook = { version = "=0.2" }
built = { version = "=0.7", features = ["chrono", "dependency-tree", "git2"] }
byte-unit = { version = "=5.1" }
chrono = { version = "=0.4", default-features = false }
clap = { version = "=4.5", features = ["derive", "env", "string"] }
csv = { version = "=1.3" }
futures = { version = "=0.3" }
garde = { version = "=0.20", features = [
    "derive",
    "regex",
    "serde",
    "unicode",
] }
gloo-net = { version = "=0.6", default-features = false, features = [
    "eventsource",
    "http",
    "json",
] }
gloo-storage = { version = "=0.3", default-features = false }
gloo-utils = { version = "=0.2", default-features = false }
http = { version = "=1.1", default-features = false }
include_dir = { version = "=0.7" }
inflector = { package = "Inflector", version = "=0.11" }
itertools = { version = "=0.13" }
js-sys = { version = "=0.3", default-features = false }
k8s-openapi = { version = "=0.23", features = ["latest", "schemars"] }
kube = { version = "=0.95", default-features = false }
kube-core = { version = "=0.95", default-features = false }
mime = { version = "=0.3", default-features = false }
once_cell = { version = "=1.20" }
patternfly-yew = { version = "=0.6", default-features = false, features = [
    "icons-fab",
    "tree",
    "yew-nested-router",
] }
regex = { version = "=1.11", default-features = false }
reqwest = { version = "=0.12", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "macos-system-configuration",
] }
schemars = { version = "=0.8", default-features = false, features = ["uuid1"] }
serde = { version = "=1.0", default-features = false }
serde_json = { version = "=1.0", default-features = false }
serde_yml = { version = "=0.0", default-features = false }
sha2 = { version = "=0.10" }
strum = { version = "=0.26" }
thiserror = { version = "=1.0", default-features = false }
tokio = { version = "=1.40", default-features = false }
tracing = { version = "=0.1" }
tracing-subscriber = { version = "=0.3" }
tracing-subscriber-wasm = { version = "=0.1" }
url = { version = "=2.5" }
uuid = { version = "=1.10", default-features = false, features = [
    "serde",
    "v4",
] }
wasm-streams = { version = "=0.4" }
web-sys = { version = "=0.3", features = [
    "FileList",
    "MediaQueryList",
    "Url",
    "Window",
] }
yew = { version = "=0.21", features = ["csr"] }
yew-markdown = { git = "https://github.com/ulagbulag/yew-markdown" }
yew-hooks = { version = "=0.3" }
yew-nested-router = { version = "=0.7" }
