[package]
name = "cassette-core"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cassette-core"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
actix-web = ["dep:actix-web"]
ui = ["dep:gloo-net", "dep:yew", "dep:yew-router"]

[dependencies]
actix-web = { workspace = true, optional = true }
garde = { workspace = true }
gloo-net = { workspace = true, optional = true }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["derive"] }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
yew = { workspace = true, optional = true }
yew-router = { workspace = true, optional = true }
