[package]
name = "cassette-core"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cassette-core"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
api = ["dep:actix-web"]
ui = ["dep:gloo-net", "dep:patternfly-yew", "dep:tracing", "dep:yew"]

# net
stream = ["dep:wasm-streams"]

# for demo ONLY
examples = []
mock-release = []

# Plugins

## Connected Data Lake (CDL)
cdl = []

[dependencies]
actix-web = { workspace = true, optional = true }
anyhow = { workspace = true }
csv = { workspace = true }
garde = { workspace = true }
gloo-net = { workspace = true, optional = true }
inflector = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["derive"] }
patternfly-yew = { workspace = true, optional = true }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true }
wasm-streams = { workspace = true, optional = true }
web-sys = { workspace = true }
yew = { workspace = true, optional = true }
