[package]
name = "cassette-gateway"

authors = { workspace = true }
description = "Cloud-native Cassette Web API Gateway"
documentation = "https://docs.rs/cassette-gateway"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls", "full"]
full = ["cdl", "kubernetes"]
experimental = []

# TLS
default-tls = ["openssl-tls"]
openssl-tls = [
    "actix-web/openssl",
    "cassette-plugin-cdl-api/openssl-tls",
    "kube/openssl-tls",
]
rustls-tls = [
    "actix-web/rustls",
    "cassette-plugin-cdl-api/rustls-tls",
    "kube/rustls-tls",
]

# plugins

## Connected Data Lake (CDL)
cdl = ["dep:cassette-plugin-cdl-api"]

## Kubernetes
kubernetes = ["dep:cassette-plugin-kubernetes-api"]

[dependencies]
cassette-core = { path = "../cassette-core" }
cassette-loader-core = { path = "../cassette-loader-core" }
cassette-plugin-kubernetes-api = { path = "../cassette-plugin-kubernetes-api", optional = true }
cassette-plugin-cdl-api = { path = "../cassette-plugin-cdl-api", optional = true }

actix-cors = { workspace = true }
actix-web = { workspace = true }
actix-web-opentelemetry = { workspace = true }
anyhow = { workspace = true }
ark-core = { workspace = true, features = ["signal"] }
clap = { workspace = true }
futures = { workspace = true }
kube = { workspace = true, features = ["client", "runtime", "ws"] }
mime = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
