[package]
name = "cassette-plugin-cdl-api"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cassette-plugin-cdl-api"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cassette-core = { path = "../cassette-core", features = ["api"] }

actix-web = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
