[package]
name = "cassette-plugin-cdl-api"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cassette-plugin-cdl-api"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# TLS
default-tls = ["openssl-tls"]
openssl-tls = ["dash-pipe-provider/openssl-tls"]
rustls-tls = ["dash-pipe-provider/rustls-tls"]

[dependencies]
cassette-core = { path = "../cassette-core", features = ["api"] }
cassette-plugin-kubernetes-api = { path = "../cassette-plugin-kubernetes-api" }

actix-web = { workspace = true }
anyhow = { workspace = true }
dash-pipe-provider = { workspace = true, features = ["kafka", "storage"] }
serde = { workspace = true }
tracing = { workspace = true }
