[package]
name = "cassette-plugin-cdl-dataset-browser"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cassette-plugin-cdl-dataset-browser"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cassette-core = { path = "../cassette-core", features = ["ui"] }
cassette-plugin-cdl-core = { path = "../cassette-plugin-cdl-core" }
