[package]
name = "cassette-plugin-helm-api"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cassette-plugin-helm-api"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vine = ["cassette-plugin-kubernetes-api/vine"]

[dependencies]
cassette-core = { path = "../cassette-core", features = ["api"] }
cassette-plugin-helm-core = { path = "../cassette-plugin-helm-core" }
cassette-plugin-kubernetes-api = { path = "../cassette-plugin-kubernetes-api" }
cassette-plugin-kubernetes-core = { path = "../cassette-plugin-kubernetes-core" }

actix-web = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
uuid = { workspace = true }
