[package]
name = "cassette-plugin-helm-core"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cassette-plugin-helm-core"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cassette-core = { path = "../cassette-core" }

schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
