[package]
name = "cassette-plugin-kubernetes-api"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cassette-plugin-kubernetes-api"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vine = ["cassette-plugin-kubernetes-core/vine", "dep:vine-api", "dep:vine-rbac"]

[dependencies]
cassette-core = { path = "../cassette-core", features = ["api"] }
cassette-plugin-jwt = { path = "../cassette-plugin-jwt" }
cassette-plugin-kubernetes-core = { path = "../cassette-plugin-kubernetes-core" }

actix-web = { workspace = true }
anyhow = { workspace = true }
http = { workspace = true }
kube = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vine-api = { workspace = true, optional = true }
vine-rbac = { workspace = true, optional = true }
