[package]
name = "cassette-plugin-kubernetes-core"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cassette-plugin-kubernetes-core"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cassette-core = { path = "../cassette-core", features = ["ui"] }

anyhow = { workspace = true }
gloo-net = { workspace = true }
http = { workspace = true }
js-sys = { workspace = true }
k8s-openapi = { workspace = true }
kube-core = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
web-sys = { workspace = true }
yew = { workspace = true }
