[package]
name = "cassette-plugin-openai-chat"

authors = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/cassette-plugin-openai-chat"
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cassette-core = { path = "../cassette-core", features = ["stream", "ui"] }

anyhow = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
js-sys = { workspace = true }
patternfly-yew = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
yew = { workspace = true }
