[package]
name = "cassette"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full"]
full = ["kubernetes"]
experimental = []

# for demo ONLY
examples = ["cassette-core/examples", "dep:cassette-loader-file"]

# plugins

## Kubernetes
kubernetes = ["kubernetes-list"]
kubernetes-list = ["dep:cassette-plugin-kubernetes-list"]

[build-dependencies]
built = { workspace = true }

[dependencies]
cassette-core = { path = "../cassette-core", features = ["ui"] }
cassette-loader-file = { path = "../cassette-loader-file", optional = true }
cassette-plugin-kubernetes-list = { path = "../cassette-plugin-kubernetes-list", optional = true }

browser-panic-hook = { workspace = true }
gloo-utils = { workspace = true }
inflector = { workspace = true }
patternfly-yew = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-subscriber-wasm = { workspace = true }
uuid = { workspace = true }
yew = { workspace = true }
yew-nested-router = { workspace = true }
