[package]
name = "cassette"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full-local"]
full = ["cdl", "kubernetes", "openai"]
full-local = ["cdl", "openai"]
experimental = []

# for demo ONLY
examples = ["cassette-core/examples", "dep:cassette-loader-file"]
mock-release = ["cassette-core/mock-release"]

# Plugins

## Connected Data Lake (CDL)
cdl = [
    "cdl-catalog",
    "cdl-dataset-browser",
    "cdl-dataset-stream-reader",
    "cdl-zone",
]
cdl-core = ["cassette-core/cdl"]
cdl-catalog = ["dep:cassette-plugin-cdl-catalog", "cdl-core"]
cdl-dataset-browser = ["dep:cassette-plugin-cdl-dataset-browser", "cdl-core"]
cdl-dataset-stream-reader = [
    "dep:cassette-plugin-cdl-dataset-stream-reader",
    "cdl-core",
]
cdl-zone = ["dep:cassette-plugin-cdl-zone", "cdl-core"]

## Kubernetes
kubernetes = ["dep:cassette-plugin-kubernetes-core", "kubernetes-list"]
kubernetes-list = ["dep:cassette-plugin-kubernetes-list"]

## OpenAI
openai = ["openai-chat"]
openai-chat = ["dep:cassette-plugin-openai-chat"]

[build-dependencies]
built = { workspace = true }

[dependencies]
cassette-core = { path = "../cassette-core", features = ["ui"] }
cassette-loader-file = { path = "../cassette-loader-file", optional = true }
cassette-plugin-cdl-catalog = { path = "../cassette-plugin-cdl-catalog", optional = true }
cassette-plugin-cdl-dataset-browser = { path = "../cassette-plugin-cdl-dataset-browser", optional = true }
cassette-plugin-cdl-dataset-stream-reader = { path = "../cassette-plugin-cdl-dataset-stream-reader", optional = true }
cassette-plugin-cdl-zone = { path = "../cassette-plugin-cdl-zone", optional = true }
cassette-plugin-kubernetes-core = { path = "../cassette-plugin-kubernetes-core", optional = true }
cassette-plugin-kubernetes-list = { path = "../cassette-plugin-kubernetes-list", optional = true }
cassette-plugin-openai-chat = { path = "../cassette-plugin-openai-chat", optional = true }

browser-panic-hook = { workspace = true }
byte-unit = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
gloo-storage = { workspace = true }
gloo-utils = { workspace = true }
inflector = { workspace = true }
itertools = { workspace = true }
patternfly-yew = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-subscriber-wasm = { workspace = true }
uuid = { workspace = true }
wasm-streams = { workspace = true }
web-sys = { workspace = true }
yew = { workspace = true }
yew-markdown = { workspace = true }
yew-hooks = { workspace = true }
yew-nested-router = { workspace = true }
